# dataclean

./: .envrc.sample  .gitignore  AGENTS.md  LICENSE  README.md  Taskfile.yml  devbox.json  mkdocs.yml  pyproject.toml
.config/git/: pre-push.sh
.devcontainer/: Dockerfile  devcontainer-lock.json  devcontainer.json
.github/workflows/: checks.yml  ci.yml  publish.yml  release.yml  tests.yml
.zed/: settings.json
1.0.0/: 404.html  index.html  objects.inv  search.html
1.0.0/autoapi/dataclean/: index.html
1.0.0/autoapi/dataclean/cleaners/: index.html
1.0.0/autoapi/dataclean/cleaners/base_cleaner/: index.html
1.0.0/autoapi/dataclean/cleaners/bool_cleaner/: index.html
1.0.0/autoapi/dataclean/col_renamer/: index.html
1.0.0/autoapi/dataclean/config/: index.html
1.0.0/autoapi/dataclean/dataclean/: index.html
1.0.0/autoapi/dataclean/engine/: index.html
1.0.0/autoapi/dataclean/types/: index.html
1.0.0/autoapi/summary/: index.html
1.0.0/search/: search_index.json
docs/: plan.md
src/dataclean/: __init__.py  col_renamer.py  config.py  dataclean.py  types.py
src/dataclean/cleaners/: base_cleaner.py  bool_cleaner.py  country_cleaner.py  currency_cleaner.py  datetime_cleaner.py  email_cleaner.py  gender_cleaner.py  numeric_cleaner.py  phone_cleaner.py  text_cleaner.py  uuid_cleaner.py
src/dataclean/engine/: dataframe.py  pandas.py  pyspark.py
tests/: clean.py  test_col_renamer.py  test_email_cleaner.py
tests/cleaners/: bool_cleaner.py  country_cleaner.py  datetime_cleaner.py  test_currency_cleaner.py  test_email_cleaner.py  test_gender_cleaner.py  test_numeric_cleaner.py  test_phone_cleaner.py  test_text_cleaner.py  uuid_cleaner.py
tests/engine/: dataframe.py  test_pandas.py  test_pyspark.py
tests/fixtures/: uncleaned.csv
(+11 files in other folders)
