[project]
name = "dataclean"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.13"
dependencies = [
    "grpcio>=1.81.0",
    "grpcio-status>=1.81.0",
    "numpy>=2.4.6",
    "pandas>=2.3.3",
    "pyarrow>=24.0.0",
    "pydantic>2.10.0",
    "pycountry>=26.2.16",
    "pyspark>=4.1.2",
    "wordninja>=2.0.0",
    "zstandard>=0.25.0",
    "phonenumbers>=9.0.34",
]

[build-system]
requires = ["uv_build>=0.11.18,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mkdocs>=1.5.0,<2.0.0",
    "mkdocs-autoapi>=0.4.1",
    "mkdocs-material>=9.5.0,<10.0.0",
    "mkdocstrings[python]>=0.24.0",
    "pytest>=9.0.3",
]
